--- a/baeredygtig-indretning.html
+++ b/baeredygtig-indretning.html
@@ -40,7 +40,7 @@
           <div class="column-wrap">
             <h2>Giv dit hjem et personligt udtryk: Vær ikke bange for at slippe kreativiteten løs</h2>
             <h4>Ligesom jeg selv, går du nok også op i at iklæde dig tøj, som afspejler din personlighed. Det samme
-              burde vi gøre med vores boligindretning; for de hyggeligste hjem er dem, man træder ind i og straks kan
+              burde vi gøre med vores boligindretning; for deascfs hyggeligste hjem er dem, man træder ind i og straks kan
               genkende ejerens personlighed. Så hvordan tilføjer vi en personlig indretningstil til vores
               boligindretning?</h4>
               <img class="content-image" src="images/forsidebillede.1.jpg"
