alt tags og css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="css/css.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -20,7 +20,7 @@
   <div class="body-wrapper">
     <header>
       <div class="header-container">
-        <a href="/"><img class="header-logo" src="images/reuse-logo.png" aria-label="Logo" /></a>
+        <a href="/"><img class="header-logo" src="images/reuse-logo.png" alt="Logo" /></a>
         <a href="baeredygtig-indretning.html" class="header-link">BÆREDYGTIG<br>INDRETNING</a>
         <a class="header-link">DIY OG<br>UPCYCLING</a>
         <a class="header-link">GRØN<br>GENRBUG</a>
@@ -41,13 +41,13 @@
           <div class="column-wrap">
               <a class="article-link" href="baeredygtig-indretning.html">
             <img class="content-image" src="images/forsidebillede.1.jpg"
-              aria-label="farverige møbler i en vintage-stil">
+              alt="farverige møbler i en vintage-stil">
             <h3>BÆREDYGTIG<br>INDRETNING</h3>
             <p>Giv dit hjem et personligt udtryk:<br> Vær ikke bange for at slippe kreativiteten løs</p>
           </a>
           </div>
           <div class="column-wrap">
-            <img class="content-image" src="images/forsidebillede.2.jpg" aria-label="to piger shopper genbrug">
+            <img class="content-image" src="images/forsidebillede.2.jpg" alt="to piger shopper genbrug">
             <h3>GRØN<br>GENBRUG</h3>
             <p>Er dit genbrugsmøbel altid bæredygtigt?<br>Vi undersøger hvordan materialer, kvalitet og levetid
               unægteligt
@@ -64,12 +64,12 @@
       <div class="footer-wrapper">
         <div class="footer-child footer-container">
           <div class="social">
-            <img class="social-logo" src="images/tiktok-share-icon-black-seeklogo.svg" aria-label="tiktok" />
+            <img class="social-logo" src="images/tiktok-share-icon-black-seeklogo.svg" alt="tiktok" />
             <p class="social-name">ReUseFurniture</p>
           </div>
 
           <div class="social">
-            <img class="social-logo" src="images/Instagram_logo_2016.svg" aria-label="instagram" />
+            <img class="social-logo" src="images/Instagram_logo_2016.svg" alt="instagram" />
             <p class="social-name">#ReUse</p>
           </div>
 
@@ -84,7 +84,7 @@
             inspirere af
             hinanden</p>
           <div class="footer-image-heart">
-            <img class="recycle-foto" src="images/recycle-heart.svg" aria-label="recyclefoto">
+            <img class="recycle-foto" src="images/recycle-heart.svg" alt="recyclefoto">
           </div>
         </div>
 
