--- a/abonner.html
+++ b/abonner.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="css/css.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -20,7 +20,7 @@
   <div class="body-wrapper">
     <header>
       <div class="header-container">
-        <a href="/"><img class="header-logo" src="images/reuse-logo.png" aria-label="Logo" /></a>
+        <a href="/"><img class="header-logo" src="images/reuse-logo.png" alt="Logo" /></a>
         <a href="baeredygtig-indretning.html" class="header-link">BÆREDYGTIG<br>INDRETNING</a>
         <a class="header-link">DIY OG<br>UPCYCLING</a>
         <a class="header-link">GRØN<br>GENRBUG</a>
@@ -54,12 +54,12 @@
       <div class="footer-wrapper">
         <div class="footer-child footer-container">
           <div class="social">
-            <img class="social-logo" src="images/tiktok-share-icon-black-seeklogo.svg" aria-label="tiktok" />
+            <img class="social-logo" src="images/tiktok-share-icon-black-seeklogo.svg" alt="tiktok" />
             <p class="social-name">ReUseFurniture</p>
           </div>
 
           <div class="social">
-            <img class="social-logo" src="images/Instagram_logo_2016.svg" aria-label="instagram" />
+            <img class="social-logo" src="images/Instagram_logo_2016.svg" alt="instagram" />
             <p class="social-name">#ReUse</p>
           </div>
 
@@ -74,7 +74,7 @@
             inspirere af
             hinanden</p>
           <div class="footer-image-heart">
-            <img class="recycle-foto" src="images/recycle-heart.svg" aria-label="recyclefoto">
+            <img class="recycle-foto" src="images/recycle-heart.svg" alt="recyclefoto">
           </div>
         </div>
 
