--- a/baeredygtig-indretning.html
+++ b/baeredygtig-indretning.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="css/css.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -20,7 +20,7 @@
   <div class="body-wrapper">
     <header>
       <div class="header-container">
-        <a href="/"><img class="header-logo" src="images/reuse-logo.png" aria-label="Logo" /></a>
+        <a href="/"><img class="header-logo" src="images/reuse-logo.png" alt="Logo" /></a>
         <a href="baeredygtig-indretning.html" class="header-link">BÆREDYGTIG<br>INDRETNING</a>
         <a class="header-link">DIY OG<br>UPCYCLING</a>
         <a class="header-link">GRØN<br>GENRBUG</a>
@@ -44,11 +44,11 @@
               genkende ejerens personlighed. Så hvordan tilføjer vi en personlig indretningstil til vores
               boligindretning?</h4>
               <img class="content-image" src="images/forsidebillede.1.jpg"
-                aria-label="farverige møbler i en vintage-stil">
+                alt="farverige møbler i en vintage-stil">
           </div>
           <div class="column-wrap">
             <img class="content-image" src="images/forsidebillede.1.jpg"
-              aria-label="farverige møbler i en vintage-stil">
+              alt="farverige møbler i en vintage-stil">
             <h2>Giv dit hjem et personligt udtryk: Vær ikke bange for at slippe kreativiteten løs</h2>
             <h4>Ligesom jeg selv, går du nok også op i at iklæde dig tøj, som afspejler din personlighed. Det samme
               burde vi gøre med vores boligindretning; for de hyggeligste hjem er dem, man træder ind i og straks kan
@@ -69,12 +69,12 @@
       <div class="footer-wrapper">
         <div class="footer-child footer-container">
           <div class="social">
-            <img class="social-logo" src="images/tiktok-share-icon-black-seeklogo.svg" aria-label="tiktok" />
+            <img class="social-logo" src="images/tiktok-share-icon-black-seeklogo.svg" alt="tiktok" />
             <p class="social-name">ReUseFurniture</p>
           </div>
 
           <div class="social">
-            <img class="social-logo" src="images/Instagram_logo_2016.svg" aria-label="instagram" />
+            <img class="social-logo" src="images/Instagram_logo_2016.svg" alt="instagram" />
             <p class="social-name">#ReUse</p>
           </div>
 
@@ -89,7 +89,7 @@
             inspirere af
             hinanden</p>
           <div class="footer-image-heart">
-            <img class="recycle-foto" src="images/recycle-heart.svg" aria-label="recyclefoto">
+            <img class="recycle-foto" src="images/recycle-heart.svg" alt="recyclefoto">
           </div>
         </div>
 
