Artikel og abonner html rettet

--- a/abonner.html
+++ b/abonner.html
@@ -34,7 +34,7 @@
 
     <div class="content-wrapper content-subscribe">
       <div class="background-overlay"></div>
-      <article class="content">
+      <article class="content" id="subscribe-content">
         <h1>Tilmeld dig et abonnement hos ReUseFurniture</h1>
 
         <form class="subscribe-form" id="newsletter-form">
