--- a/abonner.html
+++ b/abonner.html
@@ -41,10 +41,10 @@
           <div class="form-line"><label for="name">Dit Navn</label> <input type="text" required name="name"></div>
           <div class="form-line"> <label for="email">E-mail</label> <input type="email" required name="email"></div>
 
-          <button type="submit">ABONNER</button>
+          <button type="submit">Tilmeld</button>
         </form>
 
-        <p id="submissionMessage">Du er nu abonneret</p>
+        <p id="submissionMessage">Tak for din tilmeldning!</p>
 
 
       </article>
